--- a/app/views/password_mailer/reset.html.erb
+++ b/app/views/password_mailer/reset.html.erb
@@ -1,5 +1,9 @@
-<h1>Password#reset</h1>
+Hi <%= params[:user].email %>,
 
-<p>
-  <%= @greeting %>, find me in app/views/password_mailer/reset.html.erb
-</p>
+Someone (hopefully you) has requested a password reset for your account.
+
+Click the following link to reset your password:
+<%= link_to "Reset password", password_reset_edit_url(token: @token) %>
+
+It will expire automatically in <%= 15.minutes.from_now.to_fs(:time) %>.
+<%# It will expire in 15 minutes. %>
