--- a/app/views/password_mailer/reset.text.erb
+++ b/app/views/password_mailer/reset.text.erb
@@ -1,3 +1,9 @@
-Password#reset
+Hi <%= params[:user].email %>,
 
-<%= @greeting %>, find me in app/views/password_mailer/reset.text.erb
+Someone (hopefully you) has requested a password reset for your account.
+
+Click the following link to reset your password:
+<%= password_reset_edit_url(token: @token) %>
+
+It will expire automatically in <%= 15.minutes.from_now.to_s(:time) %>.
+<%# It will expire in 15 minutes. %>
