--- a/app/views/passwords/edit.html.erb
+++ b/app/views/passwords/edit.html.erb
@@ -1,13 +1,8 @@
 <h1>Edit Password</h1>
 
 <%= form_with model: Current.user, url: edit_password_path do |form| %>
-<% if form.object.errors.any? %>
-  <div class="alert alert-danger">
-    <% form.object.errors.full_messages.each do |msg| %>
-      <%= msg %><br>
-    <% end %>
-  </div>
-<% end %>
+<%= render "shared/form_errors", form: form %>
+
 
 <div class="mb-3">
   <%= form.label :password %>
