--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -10,6 +10,7 @@
 
       <% else %>
         Scheduled for <%= l tweet.publish_at, format: :long %>
+        <%= link_to "Edit Tweet", edit_tweet_path(tweet) %>
     <% end %>
   </div>
 </div>
