--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -6,7 +6,7 @@
     <%= link_to "@#{tweet.twitter_account.username}", "https://twitter.com/#{tweet.twitter_account.username}", target: :_blank %>
 
     <% if tweet.published? %>
-      <%= link_to "View on Twitter", "https:twitter.com/#{tweet.twitter_account.username}/status/#{tweet.tweeet_id}", target: :_blank %>
+      <%= link_to "View on Twitter", "https:twitter.com/#{tweet.twitter_account.username}/status/#{tweet.tweet_id}", target: :_blank %>
 
       <% else %>
         Scheduled for <%= l tweet.publish_at, format: :long %>
