--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -16,24 +16,26 @@
           <%= link_to "About", about_path, class: "nav-link" %>
         </li>
       </ul>
-    
-      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-        <% if Current.user %>
-        <li class="nav-item">
-          <%= link_to Current.user.email, edit_password_path, class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= button_to "Logout", logout_path, method: :delete, class: "btn btn-outline-secondary" %>
-        </li>
-        <% else %>
-        <li class="nav-item">
-          <%= link_to "Sign Up", sign_up_path, class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "Login", sign_in_path, class: "nav-link" %>
-        </li>
-        <% end %>
-      </ul>
+      <div class="d-flex flex-column align-items-center ms-auto">
+        <ul class="navbar-nav mb-2 mb-lg-0">
+          <% if Current.user %>
+          <li class="nav-item">
+            <%= link_to Current.user.email, edit_password_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= button_to "Logout", logout_path, method: :delete, class: "btn btn-outline-secondary" %>
+          </li>
+          <% else %>
+          <li class="nav-item">
+            <%= link_to "Sign Up", sign_up_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Login", sign_in_path, class: "nav-link" %>
+          </li>
+          <% end %>
+        </ul>
+        Current Time: <%= Time.now.strftime("%d/%b/%Y %H:%M:%S %z") %>
+      </div>
 
     </div>
   </div>
