--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -11,7 +11,7 @@
   <div class="mb-3">
     <%= form.label :publish_at %>
     <div class="form-control">
-      <%= form.datetime_select :publish_at %>
+      <%= form.datetime_select :publish_at, { order: [:day, :month, :year] } %>
     </div>
   </div>
   <%= form.button "Schedule", class: "btn btn-primary" %>
